--- a/app/views/educates/index.html.erb
+++ b/app/views/educates/index.html.erb
@@ -1,107 +1,28 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <script type="text/javascript">
-    window.onload=function(){
-      var box = document.getElementsByClassName('box');
-      var i;
-      for(i=0;i<box.length;i++){
-      box[i].addEventListener("mouseover", function(){
-        this.style.opacity=0.5;
-        this.style.backgroundColor="#FF5511";
-      });
-      box[i].addEventListener("mouseout", function() {
-          this.style.opacity=1;
-          this.style.backgroundColor="#E2F8B5";
-      });
-    }
-    };
-    </script>
-    <style type="text/css">
-      body {
-        background-image:url('6.jpg');
-        background-repeat;
-        font-family:Microsoft JhengHei;
-      }
-      #HEADER {
-        background-color: #E2F8B5;
-        font-size: 30px;
-        text-align:center;
-      }
-      ul li {
-      }
-      #WRAPPER {
-        margin:0 auto;
-        width:95%;
-        /* padding:0 2%; */
-        overflow:auto;
-      }
-      #CONTENT{
-        margin-left:25%;
-        width:75%;
-        height: auto;
-        background-color:#E2F8B5;
-        font-size: 18px;
-        padding-bottom: 5%
-      }
-      #SIDE {
-        float:left;
-        width:20%;
-
-        font-size: 30px;
-        height: auto;
-      }
-      #FOOTER {
-      }
-      .box{
-        width: 100%;
-        height:auto;
-        background-color:#E2F8B5;
-        /* opacity: 0.5; */
-        transition: opacity 1s, background-color 1s;
-      }
-      a {
-        text-decoration:none;
-      }
-    </style>
-  </head>
-
-  <body>
-    <div id= "HEADER">
-      <h1>育</h1>
-    </div>
-
-    <div>
-      <ul>
-        <li><a href="#">環保常識</a></li>
-      </ul>
-    </div>
 
     <div id="WRAPPER">
       <div id="SIDE">
         <div style="background-color:#1BC005;padding: 5% 4%;font-size:36px;font-weight:bold;">
           生活環保
         </div>
-
         <div style="background-color: #E2F8B5;line-height: 150%;padding-top:5%;padding-bottom:5%;text-align:center;">
-            <div class="box" id="box" ><a href="#">氣候變遷</a></div>
-            <div class="box" id="box" ><a href="#">海洋危機</a></div>
-            <div class="box" id="box" ><a href="#">塑化危機</a></div>
-            <div class="box" id="box"><a href="#">公害汙染</a></div>
+            <div class="box" ><a href="#">食環保</a></div>
+            <div class="box" ><a href="#">住環保</a></div>
+            <div class="box" ><a href="#">行環保</a></div>
+            <div class="box" ><a href="#">育環保</a></div>
         </div>
       </div>
       <div id="CONTENT">
         <div>
-          <%if ture %>
-             "test"
-          <% else %>
 
-          <% end%>
 
-          <!-- <% @educates.each do |educate| %>
+          <% @educates.each do |educate| %>
           <%= educate.title%>
-          <%= educate.source %> -->
-          <div style="padding-right:2%;padding-bottom:2%;align-self: center">
+          <%= educate.source %>
+          <%= educate.category %>
+          <%= educate.movie_link %>
+          <% end %>
+
+          <!-- <div style="padding-right:2%;padding-bottom:2%;align-self: center">
           <img src="3.png" width="35%";height="auto"style="padding:0.5% 4%;float:left">
           <%="educate_path"%><h2>【1】</h2></a>
           <h4>出處:YouTube 三立LIVE新聞&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;類別:氣候變遷</h4>
@@ -166,8 +87,4 @@
           </div>
         </div>
       </div>
-    </div>
-
-  </body>
-
-</html>
+    </div> -->
