--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title>Green</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script type="text/javascript">
+    window.onload=function(){
+      var box = document.getElementsByClassName('box');
+      var i;
+      for(i=0;i<box.length;i++){
+      box[i].addEventListener("mouseover", function(){
+        this.style.opacity=0.5;
+        this.style.backgroundColor="#FF5511";
+      });
+      box[i].addEventListener("mouseout", function() {
+          this.style.opacity=1;
+          this.style.backgroundColor="#E2F8B5";
+      });
+    }
+    };
+    </script>
+    <style type="text/css">
+      body {
+        background-image:url('6.jpg');
+        background-repeat;
+        font-family:Microsoft JhengHei;
+      }
+      #WRAPPER {
+        margin:0 auto;
+        width:95%;
+        /* padding:0 2%; */
+        overflow:auto;
+      }
+      #CONTENT{
+        margin-left:25%;
+        width:75%;
+        height: auto;
+        background-color:#E2F8B5;
+        font-size: 18px;
+        padding-bottom: 5%
+      }
+      #SIDE {
+        float:left;
+        width:20%;
+
+        font-size: 30px;
+        height: auto;
+      }
+
+      .box{
+        width: 100%;
+        height:auto;
+        background-color:#E2F8B5;
+        /* opacity: 0.5; */
+        transition: opacity 1s, background-color 1s;
+      }
+      a {
+        text-decoration:none;
+      }
+    </style>
   </head>
 
   <body>
